# memfd-rs

./: Cargo.toml  LICENSE
examples/: echo.rs
src/: lib.rs
